Fix timeline width/height css on mobile

--- a/styles/index.module.scss
+++ b/styles/index.module.scss
@@ -447,13 +447,17 @@
 
 .xpTimelineSvg {
   transform-origin: right top;
-  width: fit-content;
-  height: fit-content;
-  max-width: min(110px, 100%);
+  //width: fit-content;
+  //height: fit-content;
+  //max-width: min(110px, 100%);
+  width: 100%;
+  max-width: 100%;
+  height: 380px;
 
   // Small devices (landscape phones, 576px and up)
   @media (min-width: 576px) {
     width: 110px;
+    height: auto;
   }
 
   // X-Large devices (large desktops, 1200px and up)
@@ -468,13 +472,17 @@
 
 .studiesTimelineSvg {
   transform-origin: right top;
-  width: fit-content;
-  height: fit-content;
-  max-width: min(110px, 100%);
+  //width: fit-content;
+  //height: fit-content;
+  //max-width: min(110px, 100%);
+  width: 100%;
+  max-width: 100%;
+  height: 380px;
 
   // Small devices (landscape phones, 576px and up)
   @media (min-width: 576px) {
     width: 110px;
+    height: auto;
   }
 
   // X-Large devices (large desktops, 1200px and up)
